--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,35 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Chivo:400,700,900');
+
+html,body{margin: 0;padding: 0;font-family: 'Chivo', 'sans-serif';letter-spacing: 0.5px;font-size: 14px;}
+/* h1,h2,h3,h4,h5,.heading{font-family: 'Open Sans';} */
+a{text-decoration: none;background-size: 100% 200%;background-image: linear-gradient(to bottom, transparent 50%, #FBB052 50%);transition: background-position 0.3s;}
+a:hover {background-position: 0 100%;}
+
+.dark-blue{background-color: #272740;}
+.text-orange{color: #FBB052;}
+
+.logo{
+  display: flex;
+  align-items:center;
+  font-size: 1.3rem;
+  font-weight: 700;
+  letter-spacing: 1px;
+  padding: 0.25rem 2rem;
+}
+.logo img{width: 100%; max-width: 50px; margin-right: 1rem;}
+
+.nav ul{padding: 0; margin: 0.75rem 0;}
+.nav ul li{display: inline-block;padding: 0 0.5rem;}
+.nav ul li a{
+  display: block;
+  width: 100%;
+  height: 100%;
+  padding: 0.2rem 0.5rem;
+  color: #272727;
+}
+.nav-sub{
+  box-shadow: 0px 2px 8px 2px rgba(0, 0, 0, 0.05);
+  padding: 0 2.5rem;
+}
+
