Changes to Route and Components
Made new routes,
changed to single page,
added components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,4 @@
-<nav class="row nav">
-  <div class="col-md-12 dark-blue">
-      <div class="logo">
-          <img src="assets/images/icons8-rugby-100.png" alt="logo" />
-          <span class="heading text-orange">AUFooty</span>
-      </div>
-  </div>
-  <div class="col-md-12 nav-sub">
-      <ul>
-          <li><a href="/ladder">Ladder</a></li>
-          <li><a href="/fixtures">Fixtures</a></li>
-          <li><a href="/tips">Tips</a></li>
-          <li><a href="/teams">Teams</a></li>
-      </ul>
-  </div>
-</nav>
+<app-header></app-header>
+<router-outlet>
 
-<router-outlet></router-outlet>
+</router-outlet>
