--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,5 @@
-<nav class="row nav">
-  <div class="col-md-12 dark-blue">
-      <div class="logo">
-          <img src="assets/images/icons8-rugby-100.png" alt="logo" />
-          <span class="heading text-orange">AUFooty</span>
-      </div>
-  </div>
-  <div class="col-md-12 nav-sub">
-      <ul>
-          <li><a href="/ladder">Ladder</a></li>
-          <li><a href="/fixtures">Fixtures</a></li>
-          <li><a href="/tips">Tips</a></li>
-          <li><a href="/teams">Teams</a></li>
-      </ul>
-  </div>
-</nav>
-
-<router-outlet></router-outlet>
+<app-banner></app-banner>
+<div class="inset">
+  <p>&nbsp;</p>
+  <router-outlet></router-outlet>
+</div>
