--- a/src/styles.css
+++ b/src/styles.css
@@ -1,35 +1,39 @@
 /* You can add global styles to this file, and also import other style files */
-@import url('https://fonts.googleapis.com/css?family=Chivo:400,700,900');
+@import url('https://fonts.googleapis.com/css?family=Heebo:400,500,700,800,900|Lato:400,700,900');
 
-html,body{margin: 0;padding: 0;font-family: 'Chivo', 'sans-serif';letter-spacing: 0.5px;font-size: 14px;}
-/* h1,h2,h3,h4,h5,.heading{font-family: 'Open Sans';} */
-a{text-decoration: none;background-size: 100% 200%;background-image: linear-gradient(to bottom, transparent 50%, #FBB052 50%);transition: background-position 0.3s;}
+html,body{margin: 0;padding:0;width: 100%;font-family: 'Heebo';font-size: 13px; letter-spacing: 0.5px;}
+h1,h2,h3,h4,h5{font-weight: 800;letter-spacing: 2px;font-family: 'Lato';}
+
+a{
+  color:black;
+  text-decoration: none;
+  background-size: 100% 200%;
+  background-image: linear-gradient(to bottom, transparent 50%, #ac9766 50%);
+  transition: background-position 0.3s;
+}
 a:hover {background-position: 0 100%;}
 
+.inset{max-width: 1000px; margin: 0 auto;}
+.outset{max-width: 1000px; margin: 0 auto;}
+
 .dark-blue{background-color: #272740;}
-.text-orange{color: #FBB052;}
+.orange{background-color: #ffd7a5;}
 
-.logo{
-  display: flex;
-  align-items:center;
-  font-size: 1.3rem;
-  font-weight: 700;
-  letter-spacing: 1px;
-  padding: 0.25rem 2rem;
-}
-.logo img{width: 100%; max-width: 50px; margin-right: 1rem;}
+.text-orange{color: #ffd7a5;}
+.text-dark-blue{color: #272740;}
 
-.nav ul{padding: 0; margin: 0.75rem 0;}
-.nav ul li{display: inline-block;padding: 0 0.5rem;}
-.nav ul li a{
-  display: block;
-  width: 100%;
-  height: 100%;
-  padding: 0.2rem 0.5rem;
-  color: #272727;
-}
-.nav-sub{
-  box-shadow: 0px 2px 8px 2px rgba(0, 0, 0, 0.05);
-  padding: 0 2.5rem;
-}
+.text-right{text-align: right;}
+.text-center{text-align: center;}
 
+ul{margin: 0;padding: 0;}
+ul li{list-style-type: none;}
+
+.inline-team-logo{height: 20px;}
+.scores{border: 1px solid #272740;padding: 0 0.5rem;}
+
+span.tip {
+  color: rgb(10,20,50);
+  font-weight: bold;
+  background: #efefef;
+  padding: 0.5rem;
+}
