static design for fixtures, tips, ladder

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,11 @@
 <app-banner></app-banner>
 <div class="inset">
   <p>&nbsp;</p>
-  <router-outlet></router-outlet>
+  <div class="row">
+    <div class="col-md-8">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+
 </div>
+<app-footer></app-footer>
