--- a/src/app/components/home/banner/banner.component.html
+++ b/src/app/components/home/banner/banner.component.html
@@ -18,6 +18,7 @@
                     <li><a routerLink="/fixtures">Fixtures</a></li>
                     <li><a routerLink="/ladder">Ladder</a></li>
                     <li><a routerLink="/tips">Tips</a></li>
+                    <li><a routerLink="/head2head">Head to head</a></li>
                 </ul>
             </div>
         </div>
@@ -27,7 +28,11 @@
                 <h1>Your #1 source for everything Footy</h1>
             </div>
               <div class="col-md-4">
+
                 <app-fixtures-preview></app-fixtures-preview>
+                </div>
+                <div class="col-md-12">
+
                 </div>
           </div>
         </div>
