--- a/src/app/components/ladder/ladder.component.html
+++ b/src/app/components/ladder/ladder.component.html
@@ -1,3 +1,96 @@
-<p>
-  ladder works!
-</p>
+<h2 class="page-heading">Ladder</h2>
+
+<table>
+    <thead>
+        <tr>
+            <th>Team</th>
+            <th>Pts</th>
+            <th>Win</th>
+            <th>Loss</th>
+            <th>Draw</th>
+            <th>%</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>
+                <img class="inline-team-logo" src="/assets/images/1.png" alt="">Adelaide
+            </td>
+            <td>4</td>
+            <td>2</td>
+            <td>0</td>
+            <td>16</td>
+            <td>124%</td>
+        </tr>
+        <tr>
+            <td>
+                <img class="inline-team-logo" src="/assets/images/2.png" alt="">Brisbane Lions
+            </td>
+            <td>4</td>
+            <td>2</td>
+            <td>0</td>
+            <td>16</td>
+            <td>124%</td>
+        </tr>
+        <tr>
+            <td>
+                <img class="inline-team-logo" src="/assets/images/3.png" alt="">Carlton
+            </td>
+            <td>4</td>
+            <td>2</td>
+            <td>0</td>
+            <td>16</td>
+            <td>124%</td>
+        </tr>
+        <tr>
+            <td>
+                <img class="inline-team-logo" src="/assets/images/4.png" alt="">Collingwood
+            </td>
+            <td>4</td>
+            <td>2</td>
+            <td>0</td>
+            <td>16</td>
+            <td>124%</td>
+        </tr>
+        <tr>
+            <td>
+                <img class="inline-team-logo" src="/assets/images/1.png" alt="">Adelaide
+            </td>
+            <td>4</td>
+            <td>2</td>
+            <td>0</td>
+            <td>16</td>
+            <td>124%</td>
+        </tr>
+        <tr>
+            <td>
+                <img class="inline-team-logo" src="/assets/images/2.png" alt="">Brisbane Lions
+            </td>
+            <td>4</td>
+            <td>2</td>
+            <td>0</td>
+            <td>16</td>
+            <td>124%</td>
+        </tr>
+        <tr>
+            <td>
+                <img class="inline-team-logo" src="/assets/images/3.png" alt="">Carlton
+            </td>
+            <td>4</td>
+            <td>2</td>
+            <td>0</td>
+            <td>16</td>
+            <td>124%</td>
+        </tr>
+        <tr>
+            <td>
+                <img class="inline-team-logo" src="/assets/images/4.png" alt="">Collingwood
+            </td>
+            <td>4</td>
+            <td>2</td>
+            <td>0</td>
+            <td>16</td>
+            <td>124%</td>
+        </tr>
+    </tbody>
+</table>
