--- a/src/app/components/fixtures/fixtures.component.html
+++ b/src/app/components/fixtures/fixtures.component.html
@@ -1,2 +1,60 @@
 <h1 class="page-title">Fixtures</h1>
-<app-tips-preview></app-tips-preview>
+<select id="year" name="year">
+    <option value="">2019</option>
+    <option value="">2018</option>
+    <option value="">2017</option>
+  </select>
+  <select id="round" name="round">
+      <option value="">Round 5</option>
+      <option value="">Round 6</option>
+      <option value="">Round 12</option>
+      <option value="">Round 12</option>
+    </select>
+<table>
+<thead>
+  <tr>
+    <th>Line up</th>
+    <th>Time</th>
+    <th>Venue</th>
+    <th>Result</th>
+  </tr>
+</thead>
+<tbody>
+    <tr>
+      <td>Adelaide <span class=""> vs </span> Brisbane Lions</td>
+      <td>Apr 24</td>
+      <td>Adelaide Oval</td>
+      <td>ADE <span class="scores">0 - 0</span> BRI</td>
+    </tr>
+    <tr>
+      <td>Adelaide <span class=""> vs </span> Brisbane Lions</td>
+      <td><span class="live">Live</span></td>
+      <td>Adelaide Oval</td>
+      <td>-</td>
+    </tr>
+    <tr>
+      <td>Adelaide <span class=""> vs </span> Brisbane Lions</td>
+      <td>7:30 PM Apr 26</td>
+      <td>Adelaide Oval</td>
+      <td>-</td>
+    </tr>
+    <tr>
+      <td>Adelaide <span class=""> vs </span> Brisbane Lions</td>
+      <td>7:30 PM Apr 26</td>
+      <td>Adelaide Oval</td>
+      <td>-</td>
+    </tr>
+    <tr>
+      <td>Adelaide <span class=""> vs </span> Brisbane Lions</td>
+      <td>7:30 PM Apr 26</td>
+      <td>Adelaide Oval</td>
+      <td>-</td>
+    </tr>
+    <tr>
+      <td>Adelaide <span class=""> vs </span> Brisbane Lions</td>
+      <td>7:30 PM Apr 26</td>
+      <td>Adelaide Oval</td>
+      <td>-</td>
+    </tr>
+</tbody>
+</table>
