--- a/src/app/components/home/banner/banner.component.css
+++ b/src/app/components/home/banner/banner.component.css
@@ -2,7 +2,7 @@
 nav{position: relative; min-height: 300px; background: url('src/assets/images/daniel-anthony-535300-unsplash.jpg');background-size: cover;background-position: center;}
 .primary-nav{height: 100%; padding: 2rem 56px 1rem;}
 .sub-nav{background: rgba(10,20,50,0.5);height: 100%;}
-h1{color: white;}
+h1{color: white; font-weight: 600; font-size: 42px;font-family: 'Lato';}
 
 .logo{
   color:white;
@@ -17,5 +17,6 @@ h1{color: white;}
 
 ul{margin: 0;padding: 0;}
 ul li{display: inline-block;}
-ul li a{color: white;text-decoration: none;display: block; padding: 1rem;transition: all 0.3s ease-in-out; border-top: 3px solid #0c1f31;}
-ul li a:hover, ul li a:focus, ul li a:active{background: #0c1f31; border-top: 3px solid #ac9766;}
+ul li a{color: white;text-decoration: none;display: block; padding: 1rem;transition: all 0.3s ease-in-out;}
+ul li a:hover, ul li a:focus, ul li a:active{background: #3F51B5;}
+
