--- a/src/app/components/home/fixtures-preview/fixtures-preview.component.css
+++ b/src/app/components/home/fixtures-preview/fixtures-preview.component.css
@@ -1,16 +1,21 @@
 .banner-table{position: relative;}
-
-table{
+.upcoming-list{
   border-top: 5px solid rgb(10,20,50);
   position: absolute;
-  left: 4rem;
+  right: 1rem;
   top: 2rem;
-  z-index: 3;
+  padding: 0.5rem 1rem;
   background: white;
-  max-width: 250px;
-  width: 100%;
   box-shadow: 0 2px 15px -2px rgba(0,0,0,0.15);
 }
-tr td, tr th{padding: 0.5rem;}
-tr td{border-bottom:  1px solid #efefef;}
-
+.upcoming-list-title{
+  text-align: center;
+  color: #040626;
+}
+.upcoming-game h6{
+font-size: 14px;
+}
+.upcoming-game:not(:last-child){
+  border-bottom: 1px solid #efefef;
+}
+a{display: block;margin: 1rem 0 0.5rem;text-align: right;}
