--- a/src/app/components/home/fixtures-preview/fixtures-preview.component.html
+++ b/src/app/components/home/fixtures-preview/fixtures-preview.component.html
@@ -1,40 +1,24 @@
-<div class="banner-table">
-<table>
-    <thead>
-        <tr>
-            <th colspan="3">
-                <p>Upcoming Matches</p>
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td><img class="inline-team-logo" src="assets/images/1.png" alt="">ADE</td>
-            <td><span class="scores">0 - 1</span></td>
-            <td><img class="inline-team-logo" src="assets/images/2.png" alt="">BRI</td>
-        </tr>
-        <tr>
-            <td><img class="inline-team-logo" src="assets/images/3.png" alt="">ADE</td>
-            <td><span class="scores">0 - 1</span></td>
-            <td><img class="inline-team-logo" src="assets/images/4.png" alt="">BRI</td>
-        </tr>
-        <tr>
-            <td><img class="inline-team-logo" src="assets/images/1.png" alt="">ADE</td>
-            <td><span class="scores">0 - 1</span></td>
-            <td><img class="inline-team-logo" src="assets/images/2.png" alt="">BRI</td>
-        </tr>
-        <tr>
-            <td><img class="inline-team-logo" src="assets/images/1.png" alt="">ADE</td>
-            <td><span class="scores">0 - 1</span></td>
-            <td><img class="inline-team-logo" src="assets/images/2.png" alt="">BRI</td>
-        </tr>
-    </tbody>
-    <tfoot>
-        <tr>
-            <th colspan="3" class="text-right">
-                <a href="#">View more ➞</a>
-            </th>
-        </tr>
-    </tfoot>
-</table>
+<div class="upcoming-list">
+  <h6 class="upcoming-list-title">Upcoming games</h6>
+  <div class="upcoming-game">
+    <h6>ADE vs BRI</h6>
+    <p class="muted">7:50pm, Apr 26 Adelaide Oval, Adelaide, SA.</p>
+  </div>
+  <div class="upcoming-game">
+    <h6>ADE vs BRI</h6>
+    <p class="muted">7:50pm, Apr 26 Adelaide Oval, Adelaide, SA.</p>
+  </div>
+  <div class="upcoming-game">
+    <h6>ADE vs BRI</h6>
+    <p class="muted">7:50pm, Apr 26 Adelaide Oval, Adelaide, SA.</p>
+  </div>
+  <div class="upcoming-game">
+    <h6>ADE vs BRI</h6>
+    <p class="muted">7:50pm, Apr 26 Adelaide Oval, Adelaide, SA.</p>
+  </div>
+  <div class="upcoming-game">
+    <h6>ADE vs BRI</h6>
+    <p class="muted">7:50pm, Apr 26 Adelaide Oval, Adelaide, SA.</p>
+  </div>
+  <a href="#">View details ➞</a>
 </div>
