home page styling

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,9 @@
     <div class="col-md-8">
       <router-outlet></router-outlet>
     </div>
+  <div class="offset-md-1 col-md-3 offset-matches">
+    <app-ladder-preview></app-ladder-preview>
   </div>
-
+</div>
 </div>
 <app-footer></app-footer>
