--- a/src/app/components/home/banner/banner.component.html
+++ b/src/app/components/home/banner/banner.component.html
@@ -9,7 +9,9 @@
                       AUFooty
                     </span>
                 </div>
-                <div class="col-md-8"></div>
+                <div class="col-md-8">
+                  <a href="" class="button right-link">Choose Team</a>
+                </div>
             </div>
         </div>
         <div class="sub-nav col-md-12">
@@ -27,7 +29,7 @@
             <div class="col-md-8">
                 <h1>Your #1 source for everything Footy</h1>
             </div>
-              <div class="col-md-4">
+              <div class="offset-md-1 col-md-3">
 
                 <app-fixtures-preview></app-fixtures-preview>
                 </div>
