--- a/src/styles.css
+++ b/src/styles.css
@@ -50,6 +50,13 @@ ul li{list-style-type: none;}
   padding: 0.5rem;
 }
 
+.button {
+  color: white;
+  font-weight: bold;
+  background: #272740;
+  padding: 0.5rem;
+}
+
 .live::before{
   content: '';
   width: 10px;
@@ -58,4 +65,7 @@ ul li{list-style-type: none;}
   display: inline-block;
   background: red;
   border-radius: 0.5rem;
+}
+.offset-matches{
+  margin-top: 280px;
 }
