--- a/src/app/components/home/fixtures-preview/fixtures-preview.component.css
+++ b/src/app/components/home/fixtures-preview/fixtures-preview.component.css
@@ -2,11 +2,13 @@
 .upcoming-list{
   border-top: 5px solid rgb(10,20,50);
   position: absolute;
-  right: 1rem;
+  left: 1.5rem;
   top: 2rem;
   padding: 0.5rem 1rem;
   background: white;
   box-shadow: 0 2px 15px -2px rgba(0,0,0,0.15);
+  max-width: 260px;
+  width: 100%;
 }
 .upcoming-list-title{
   text-align: center;
