--- a/src/app/components/home/ladder-preview/ladder-preview.component.html
+++ b/src/app/components/home/ladder-preview/ladder-preview.component.html
@@ -1,3 +1,43 @@
-<p>
-  ladder-preview works!
-</p>
+<div class="ladder-preview">
+    <h6>Ladder</h6>
+    <table>
+        <thead>
+            <tr>
+                <th>Team</th>
+                <th>Pts</th>
+                <th>%</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>
+Adelaide
+                </td>
+                <td>4</td>
+                <td>124%</td>
+            </tr>
+            <tr>
+                <td>
+Brisbane Lions
+                </td>
+                <td>4</td>
+                <td>124%</td>
+            </tr>
+            <tr>
+                <td>
+Carlton
+                </td>
+                <td>4</td>
+                <td>124%</td>
+            </tr>
+            <tr>
+                <td>
+Collingwood
+                </td>
+                <td>4</td>
+                <td>124%</td>
+            </tr>
+        </tbody>
+    </table>
+<p class="text-right"><a href="" class="link-right">View full ➞</a></p>
+</div>
