--- a/src/app/components/home/upcoming-prediction/upcoming-prediction.component.html
+++ b/src/app/components/home/upcoming-prediction/upcoming-prediction.component.html
@@ -4,14 +4,14 @@
       <span class="muted">Adelaide Oval, Adelaide, SA.</span>
   </div>
   <div class="row odds-detail">
-      <h4 class="col-md-2 text-blue"><img class="inline-team-logo" class="" src="/assets/images/1.png" alt=""><br /> ADE</h4>
+      <h5 class="col-md-2 text-blue"><img class="inline-team-logo" class="" src="/assets/images/1.png" alt=""><br /> ADE</h5>
       <p class="col-md-8 odds">
           <span class="odds-bar"><span class="odds-fill" style="width:60.1%">&nbsp;</span></span>
           <br>
           <span class="tip">Winning odds: 60.1%</span><span>&nbsp;</span>
       </p>
-      <h4 class="col-md-2 text-blue"><img class="inline-team-logo" class="" src="/assets/images/2.png" alt=""><br>BRI</h4>
+      <h5 class="col-md-2 text-blue"><img class="inline-team-logo" class="" src="/assets/images/2.png" alt=""><br>BRI</h5>
   </div>
 </div>
-<a class="right-link" href="/tips">More tips ➞</a>
+<!-- <p><a class="right-link" href="/tips">More tips ➞</a><br></p> -->
 
