--- a/src/app/components/fixtures/fixtures.component.html
+++ b/src/app/components/fixtures/fixtures.component.html
@@ -1,4 +1,4 @@
-<h1 class="page-title">Fixtures</h1>
+<h3 class="page-heading">Fixtures</h3>
 <select id="year" name="year">
     <option value="">2019</option>
     <option value="">2018</option>
