--- a/src/app/components/fixtures/fixtures.component.html
+++ b/src/app/components/fixtures/fixtures.component.html
@@ -10,7 +10,7 @@
       <option value="">Round 12</option>
       <option value="">Round 12</option>
     </select>
-<table>
+<table class="display">
 <thead>
   <tr>
     <th>Line up</th>
@@ -29,17 +29,5 @@
        <span *ngIf="game.complete == 0">-</span>
       </td>
     </tr>
-    <!-- <tr>
-      <td>Adelaide <span class=""> vs </span> Brisbane Lions</td>
-      <td><span class="live">Live</span></td>
-      <td>Adelaide Oval</td>
-      <td>-</td>
-    </tr>
-    <tr>
-      <td>Adelaide <span class=""> vs </span> Brisbane Lions</td>
-      <td>7:30 PM Apr 26</td>
-      <td>Adelaide Oval</td>
-      <td>-</td>
-    </tr> -->
 </tbody>
 </table>
