--- a/src/app/components/head-to-head/head-to-head.component.html
+++ b/src/app/components/head-to-head/head-to-head.component.html
@@ -21,7 +21,7 @@
 </div>
 <table>
     <thead>
-        <tr>
+        <tr >
             <th>Year</th>
             <th>Round</th>
             <th>Home Team</th>
@@ -31,45 +31,13 @@
         </tr>
     </thead>
     <tbody>
-        <tr>
-            <td>2019</td>
-            <td>5</td>
-            <td>Adelaide</td>
-            <td><span class="scores">12 - 10</span></td>
-            <td>Brisbane Lions</td>
-            <td>23 April</td>
-        </tr>
-        <tr>
-            <td>2019</td>
-            <td>5</td>
-            <td>Adelaide</td>
-            <td><span class="scores">12 - 10</span></td>
-            <td>Brisbane Lions</td>
-            <td>23 April</td>
-        </tr>
-        <tr>
-            <td>2019</td>
-            <td>5</td>
-            <td>Adelaide</td>
-            <td><span class="scores">12 - 10</span></td>
-            <td>Brisbane Lions</td>
-            <td>23 April</td>
-        </tr>
-        <tr>
-            <td>2019</td>
-            <td>5</td>
-            <td>Adelaide</td>
-            <td><span class="scores">12 - 10</span></td>
-            <td>Brisbane Lions</td>
-            <td>23 April</td>
-        </tr>
-        <tr>
-            <td>2019</td>
-            <td>5</td>
-            <td>Adelaide</td>
-            <td><span class="scores">12 - 10</span></td>
-            <td>Brisbane Lions</td>
-            <td>23 April</td>
+        <tr *ngFor="let game of gamesFil">
+            <td>{{game.year}}</td>
+            <td>{{game.round}}</td>
+            <td>{{game.hteam}}</td>
+            <td><span class="scores">{{game.hscore}} - {{game.ascore}}</span></td>
+            <td>{{game.ateam}}</td>
+            <td>{{game.date}}</td>
         </tr>
     </tbody>
 </table>
