add my team cookie

--- a/src/app/components/home/banner/banner.component.html
+++ b/src/app/components/home/banner/banner.component.html
@@ -4,13 +4,10 @@
         <div class="primary-nav col-md-12">
             <div class="row outset">
                 <div class="col-md-4">
-                    <span class="logo">
-                      <!-- <img src="/assets/images/logo-outline.png" alt="">  -->
-                      AUFooty
-                    </span>
+                    <span class="logo">AUFooty</span>
                 </div>
                 <div class="col-md-8">
-                  <a href="" class="button right-link">Choose Team</a>
+                  <div><app-choose-team></app-choose-team></div>
                 </div>
             </div>
         </div>
