--- a/src/styles.css
+++ b/src/styles.css
@@ -36,6 +36,8 @@ table{width: 100%;}
 .float-right{float: right;}
 
 .right-link{display: inline-block; margin: 0.25rem 0;float: right;font-size: 12px;}
+.inline-link{color: #3f51b5;text-decoration: underline;margin: 0 0.5rem;}
+.inline-link:active, .inline-link:focus, .inline-link:hover{color: black; transition: all 0.3s ease-in-out;}
 
 ul{margin: 0;padding: 0;}
 ul li{list-style-type: none;}
