--- a/src/app/components/home/ladder-preview/ladder-preview.component.html
+++ b/src/app/components/home/ladder-preview/ladder-preview.component.html
@@ -4,17 +4,15 @@
         <thead>
             <tr>
                 <th>Team</th>
-                <th>Pts</th>
                 <th>%</th>
             </tr>
         </thead>
         <tbody>
             <tr *ngFor="let team of ladder">
                 <td>{{team.team}}</td>
-                <td>{{team.points}}</td>
                 <td>{{team.percentage}}%</td>
             </tr>
         </tbody>
     </table>
-<p class="text-right"><a routerLink="/ladder" class="link-right">View full ➞</a></p>
+<p class="text-right"><a routerLink="/ladder" class="link-right ">View Full Ladder ➞</a></p>
 </div>
