--- a/src/app/components/head-to-head/head-to-head.component.html
+++ b/src/app/components/head-to-head/head-to-head.component.html
@@ -1,23 +1,21 @@
 <h2 class="page-heading">Head to head</h2>
-
 <div class="row">
     <div class="col-md-6 text-center">
-        <div style="background-image:url('/assets/images/1.png')" class="h2h-image"></div>
-        <h5>Adelaide</h5>
+        <img  src="/assets/images/{{myTeam.id}}.png" alt="{{myTeam.name}}_logo" width="80"/>
+            <h5>{{myTeam.name }}</h5>
     </div>
+    
     <div class="col-md-6 text-center">
-        <div style="background-image:url('/assets/images/2.png')" class="h2h-image"></div>
-        <h5>Brisbane Lions</h5>
-        <a class="muted text-blue">Change rival</a>
+        <img  src="/assets/images/{{myTeamR.id}}.png" alt="{{myTeamR.name}}_logo" width="80"/>
+        <h5>{{myTeamR.name}}</h5>
+        <div><app-rival-team></app-rival-team></div>
     </div>
-    <div class="col-md-12">
-        <p class="text-center">Total games: 4</p>
-        <div class="h2h-bar">
-            <span style="width:50%" class="h2h-win">Win: 2</span>
-            <span style="width:25%" class="h2h-draw">Draw: 1</span>
-            <span style="width:25%" class="h2h-loss">Loss: 1</span>
-        </div>
-    </div>
+</div>
+<div class="col-md-8">
+
+    {{myTeam.name}}
+    vs
+    {{myTeamR.name}}
 </div>
 <table>
     <thead>
