fix fixtures source

--- a/src/app/components/home/banner/banner.component.css
+++ b/src/app/components/home/banner/banner.component.css
@@ -18,5 +18,5 @@ h1{color: white; font-weight: 600; font-size: 42px;font-family: 'Lato';}
 ul{margin: 0;padding: 0;}
 ul li{display: inline-block;}
 ul li a{color: white;text-decoration: none;display: block; padding: 1rem;transition: all 0.3s ease-in-out;}
-ul li a:hover, ul li a:focus, ul li a:active{background: #3F51B5;}
+ul li a.active, ul li a:hover, ul li a:focus, ul li a:active{background: #3F51B5;}
 
