--- a/src/app/components/home/ladder-preview/ladder-preview.component.css
+++ b/src/app/components/home/ladder-preview/ladder-preview.component.css
@@ -3,15 +3,20 @@ h6{
   color: #040626;
 }
 .ladder-preview{
-  padding: 0.5rem 1rem;
+    padding: 0.5rem 1rem;
     background: white;
     box-shadow: 0 2px 15px -2px rgba(0,0,0,0.15);
     max-width: 260px;
     width: 100%;
+    margin-top: 280px;
 }
 table{border-top: none;}
 tr td, tr th{padding: 0.25rem 0.5rem;}
 
-table tr:nth-child(n+5) {
-  display:none;
+table tr:nth-child(n+5) {display:none;}
+@media(max-width: 768px){
+  .ladder-preview{
+    max-width: 100%;
+    margin-top: 2rem;
+  }
 }
