--- a/src/app/components/home/upcoming-prediction/upcoming-prediction.component.html
+++ b/src/app/components/home/upcoming-prediction/upcoming-prediction.component.html
@@ -6,9 +6,10 @@
   <div class="row odds-detail">
       <h5 class="col-md-2 text-blue"><img class="inline-team-logo" src="/assets/images/{{upcomingGameTip.hteamid}}.png" alt=""><br /> {{upcomingGameTip.hteam}}</h5>
       <p class="col-md-8 odds">
-          <span class="odds-bar"><span class="odds-fill" [ngStyle]="{'width': upcomingGameTip.percentage + '%'}">&nbsp;</span></span>
+          <!-- <span class="odds-bar"><span class="odds-fill" [style.width.%]="{'width': upcomingGameTip.hconfidence + '%'}">&nbsp;</span></span> -->
           <br>
-          <span class="tip">Winning odds: {{upcomingGameTip.confidence}}%</span><span>&nbsp;</span>
+          <span class="tip">{{upcomingGameTip.hteam}} winning odds: {{upcomingGameTip.hconfidence}}%</span><span>&nbsp;</span>
+          <span class="tip">{{upcomingGameTip.ateam}} winning odds: {{ 100.00 - upcomingGameTip.hconfidence | number: '.2-2'}}%</span><span>&nbsp;</span>
       </p>
       <h5 class="col-md-2 text-blue"><img class="inline-team-logo" src="/assets/images/{{upcomingGameTip.ateamid}}.png" alt=""><br>{{upcomingGameTip.ateam}}</h5>
   </div>
