fix fixture table details, logo to upcoming games

--- a/src/app/components/fixtures/fixtures.component.html
+++ b/src/app/components/fixtures/fixtures.component.html
@@ -20,7 +20,7 @@
       <td>{{game.date | date: 'medium'}}</td>
       <td>{{game.venue}}</td>
       <td>
-       <span *ngIf="game.complete == 100">ADE <span class="scores">{{game.hgoals}} - {{game.agoals}}</span> BRI</span>
+       <span *ngIf="game.complete == 100">{{game.hteam}} <span class="scores">{{game.hgoals}} - {{game.agoals}}</span> {{game.ateam}}</span>
        <span class="live" *ngIf="game.complete > 0 && game.complete < 100">LIVE</span>
        <span *ngIf="game.complete == 0">-</span>
       </td>
