--- a/src/app/components/home/fixtures-preview/fixtures-preview.component.css
+++ b/src/app/components/home/fixtures-preview/fixtures-preview.component.css
@@ -28,3 +28,10 @@ a{display: block;margin: 1rem 0 0.5rem;text-align: right;}
       max-width: 100%;
   }
 }
+.team-logo {text-align: center; position: relative;}
+.team-logo img{
+  max-width: 80px;
+  position: absolute;
+  left: -40px;
+  bottom: 0;
+}
