--- a/src/app/components/home/fixtures-preview/fixtures-preview.component.html
+++ b/src/app/components/home/fixtures-preview/fixtures-preview.component.html
@@ -1,5 +1,8 @@
 <div class="upcoming-list">
-  <h6 class="upcoming-list-title">Upcoming games</h6>
+  <h6 class="upcoming-list-title">Upcoming games <br /> <span class="muted">Team: {{myTeam.name}}</span> </h6>
+  <div class="team-logo">
+    <img src="assets/images/{{myTeam.id}}.png" alt="{{myTeam.name}}">
+  </div>
   <div *ngFor="let game of games" class="upcoming-game">
     <h6>{{game.ateam}} vs {{game.hteam}}</h6>
     <p class="muted">{{game.date | date: 'medium'}}, {{game.venue}}</p>
