--- a/src/app/components/home/ladder-preview/ladder-preview.component.css
+++ b/src/app/components/home/ladder-preview/ladder-preview.component.css
@@ -3,12 +3,13 @@ h6{
   color: #040626;
 }
 .ladder-preview{
+    position: absolute;
     padding: 0.5rem 1rem;
     background: white;
     box-shadow: 0 2px 15px -2px rgba(0,0,0,0.15);
-    max-width: 260px;
+    max-width: 280px;
     width: 100%;
-    margin-top: 280px;
+    margin-top: 380px;
 }
 table{border-top: none;}
 tr td, tr th{padding: 0.25rem 0.5rem;}
