--- a/src/app/components/geolocation/nearest/nearest.component.html
+++ b/src/app/components/geolocation/nearest/nearest.component.html
@@ -1,31 +1,13 @@
-<h5>Events near you</h5><br>
-<div class="nearest-game">
-  <!-- <span class="tag">At a stadium near you</span> -->
-  <span class="float-right muted">Distance: 2.4 km</span>
-<h6>Marvel Stadium<span class="muted"> Docklands, Victoria</span></h6>
-<a class="tip right-link">Get Tickets</a>
-<p><span>Matchup: Collingwood vs Carlton</span><br />
-    <span class="muted">Time: 7:30pm 28 April</span>
-
-</p>
-</div>
-<div class="nearest-game">
-  <!-- <span class="tag">At a stadium near you</span> -->
-  <span class="float-right muted">Distance: 2.4 km</span>
-<h6>Marvel Stadium<span class="muted"> Docklands, Victoria</span></h6>
-<a class="tip right-link">Get Tickets</a>
-<p><span>Matchup: Collingwood vs Carlton</span><br />
-    <span class="muted">Time: 7:30pm 28 April</span>
-
-</p>
-</div>
-<div class="nearest-game">
-  <!-- <span class="tag">At a stadium near you</span> -->
-  <span class="float-right muted">Distance: 2.4 km</span>
-<h6>Marvel Stadium<span class="muted"> Docklands, Victoria</span></h6>
-<a class="tip right-link">Get Tickets</a>
-<p><span>Matchup: Collingwood vs Carlton</span><br />
-    <span class="muted">Time: 7:30pm 28 April</span>
-
-</p>
+<div *ngFor="let nearestGames of nearestGame">
+    <h5>Events near you</h5><br>
+    <div class="nearest-game">
+      <!-- <span class="tag">At a stadium near you</span> -->
+      <!-- <span class="float-right muted">Distance: 2.4 km</span> -->
+      <h6>{{nearestGame.venue}}</h6>
+      <a class="tip right-link">Get Tickets</a>
+      <p>
+        <span>Matchup: {{nearestGame.hteam}} vs {{nearestGame.ateam}}</span><br />
+        <span class="muted">Time: {{nearestGame.date | date: 'fullDate'}}, {{nearestGame.date | date: 'shortTime'}}</span>
+      </p>
+    </div>
 </div>
