modify fixture component styling

--- a/src/app/components/home/fixtures-preview/fixtures-preview.component.html
+++ b/src/app/components/home/fixtures-preview/fixtures-preview.component.html
@@ -1,17 +1,15 @@
 <div class="upcoming-list">
-  <h6 class="upcoming-list-title">Next 5 matches of 
-    <img class="inline-team-logo" src="/assets/images/{{myTeam.id}}.png" alt="{{myTeam.id}}" /><br /> <span class="muted">Team: {{myTeam.name}}</span> 
+  <h6 class="upcoming-list-title">Next 5 matches for
+    <br /> <span class="muted">Team: {{myTeam.name}}</span>
   </h6>
+  <div class="team-logo"><img src="/assets/images/{{myTeam.id}}.png" alt="{{myTeam.id}}" /></div>
 
   <div *ngFor="let game of games" class="upcoming-game">
-    
-    <h6>
-        <img class="inline-team-logo" src="/assets/images/{{game.hteamid}}.png" alt="{{game.hteam}}" />
-
-         {{game.hteam}} vs {{game.ateam}} 
-
-         <img class="inline-team-logo" src="/assets/images/{{game.ateamid}}.png" alt="{{game.ateam}}" />
-    </h6>
+    <div class="text-center">
+      <img class="inline-team-logo float-left" src="/assets/images/{{game.hteamid}}.png" alt="{{game.hteam}}" />
+      <img class="inline-team-logo float-right" src="/assets/images/{{game.ateamid}}.png" alt="{{game.ateam}}" />
+      <h6>{{game.hteam}} vs {{game.ateam}}</h6>
+    </div>
     <p class="muted">{{game.date | date: 'medium'}}, {{game.venue}}</p>
   </div>
 </div>
