FIX GEO LOCATION
FIXED DILASHA KO ALU JASTO TYPO.

--- a/src/app/components/geolocation/nearest/nearest.component.html
+++ b/src/app/components/geolocation/nearest/nearest.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let nearestGames of nearestGame">
+<div *ngFor="let nearestGame of nearestGames">
     <h5>Events near you</h5><br>
     <div class="nearest-game">
       <!-- <span class="tag">At a stadium near you</span> -->
