--- a/src/app/components/home/upcoming-prediction/upcoming-prediction.component.css
+++ b/src/app/components/home/upcoming-prediction/upcoming-prediction.component.css
@@ -1,9 +1,9 @@
 .prediction{
   width: 100%;
-  /* border: 1px solid #efefef;
-  border-left: 5px solid rgb(10,20,50); */
   padding: 1rem;
-
+  border: 3px solid #272740;
+  border-left: none;
+  border-right: none;
 }
 .prediction img{height: 40px;margin: 0 01rem;}
 .prediction h3{margin: 0;}
